# VChat-CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  deploy.sh  install_lib.sh
.cache/clangd/index/: Assertion.h.CB05A1601C692BD2.idx  Column.h.914B85D986E19F30.idx  Database.h.86AEA4B58EBB0628.idx  Exception.h.17B914F971E4DF96.idx  SQLiteCpp.h.BAA0BDFCD4908682.idx  SQLiteCppExport.h.D5BF2DEF55FADC61.idx  Statement.h.46D3E53B7CB5788D.idx  Transaction.h.B6D3C943934D81A4.idx  Utils.h.751517F7D4ABEEEF.idx  abi_prefix.hpp.A21759D69A8664AD.idx  abi_prefix.hpp.BA3EC794886B1973.idx  abi_suffix.hpp.E9B71379E2AC6E70.idx  abi_suffix.hpp.F115B994EB62F6F3.idx  about.cpp.01C6B1D5B69876FC.idx  about.h.E489333DAD479A13.idx  acceptor.cpp.05DCFD9485CC588A.idx  acceptor.h.B083F6D5F9CA5B10.idx  access.hpp.440B0443CE98DD1D.idx  add.hpp.2C5677F632946224.idx  add_rvalue_reference.hpp.BC0CF04A6A861A9B.idx  address.hpp.3084FAE6071B815C.idx  address.hpp.31539BF23D905B40.idx  address.ipp.57C44DA27F2AEB3C.idx  address_v4.hpp.1574BECBBBCF2D51.idx  address_v4.hpp.D536AA410C7C5EDE.idx  address_v4.ipp.3A37368B752DDDC3.idx  address_v4_iterator.hpp.5F1CF59C7FB9EC20.idx  address_v4_range.hpp.DFB02257E8FFEAA8.idx  address_v6.hpp.7387E523DF561B5A.idx  address_v6.hpp.DD91B797DACEFA1E.idx  address_v6.ipp.A738F83946DF0881.idx  address_v6_iterator.hpp.60F5F04E799845A3.idx  address_v6_range.hpp.BAF721C3C051EEE6.idx  addressof.hpp.A3F52AC8D3C1F530.idx  addressof.hpp.CF714C86F90F209D.idx  adjust_functors.hpp.659E68ACA7E93D4B.idx  adl.hpp.CF22374E43A297D0.idx  adl_barrier.hpp.F234DC66337736A1.idx  adt.hpp.F21991C77A03C1F9.idx  aligned_storage.hpp.8AD518880EF7D1F5.idx  (+967 more)
client/: CMakeLists.txt
client/include/: chat.h  common.h  common.hpp  connection.h  control.hpp  cowsay.h  data.hpp  format.hpp  function.h  help.h  help.hpp  info.h  logo.hpp  macro.h  macro.hpp  net.h  package.h  picture.h  service.h  start.h  transmission.hpp  tui.h  tui.hpp
client/include/data/: data.hpp  info.h  package.h
client/include/ui/: about.h  chat.h  dashboard.h  help.h  telescope.h  tui.h  ui.h  vchat.h
client/src/: chat.cpp  connection.cpp  control.cpp  function.cpp  info.cpp  main.cpp  net.cpp  package.cpp  start.cpp  tool.cpp  transmission.cpp  tui.cpp
client/src/data/: info.cpp  package.cpp
client/src/ui/: about.cpp  chat.cpp  dashboard.cpp  help.cpp  telescope.cpp  tool.cpp  tui.cpp  ui.cpp  vchat.cpp
help/: data.json  dragon.cpp  sqlcmd.md
help/design/: .$server.drawio.bkp  er.drawio  server.drawio
libs/json/share/pkgconfig/: nlohmann_json.pc
log/: 20240526-202442.847167  20240526-202458.849356  20240526-202610.859501  20240526-202705.866068  20240526-203042.897133  20240526-203114.901079  20240526-203121.902652  20240526-203407.925907  20240526-203746.956177  20240526-203823.961514  20240526-231105.2213625  20240526-231107.2213802  20240526-231400.2235994  20240526-231402.2236171  20240526-231505.2244963  20240526-231556.2251730  20240526-231559.2252109  20240526-231706.2261319  20240526-231729.2264323  20240526-231747.2266137  20240526-231849.2274656  20240526-232028.2286142  20240526-232515.2324950  20240526-232608.2331844  20240526-232611.2332223  20240526-232709.2339843  20240526-232731.2342847  20240526-232806.2347341  20240526-232823.2349738  20240526-232828.2350295  20240526-232836.2351379  20240526-234245.2462749  20240526-234246.2462924  20240526-234255.2464008  20240526-234400.2472594  20240526-234530.2484296  20240526-234724.2499566  20240526-234726.2499880  20240526-234738.2501355  20240526-234939.2517221  (+430 more)
resource/sql/: vchat.db  vchat.sql
resource/sql/backup/: vchat.db  vchat.sql
server/: CMakeLists.txt
server/include/: acceptor.h  common.h  connection.h  data.hpp  macro.h  package.h  service.h  store.h  transmission.h  user.h  work.h
server/include/data/: data.hpp  package.h  store.h
server/include/net/: connection.h  server.h
server/include/service/: service.h
server/src/: acceptor.cpp  connection.cpp  main.cpp  package.cpp  service.cpp  store.cpp  transmission.cpp  work.cpp
server/src/data/: package.cpp  store.cpp
server/src/net/: connection.cpp  server.cpp
server/src/service/: service.cpp
